Bug 1550009 - Make HashTable call templated alloc/free methods with the same type r=froydnj?

Differential Revision: https://phabricator.services.mozilla.com/D30371